tests/rosetta/transpiler/Rust/empty-directory.error
warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/empty-directory.rs:46:2
   |
46 | };
   |  ^ help: remove this semicolon
   |
   = note: `#[warn(redundant_semicolons)]` on by default

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/empty-directory.rs:56:2
   |
56 | };
   |  ^ help: remove this semicolon

warning: unnecessary parentheses around `return` value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/empty-directory.rs:43:16
   |
43 |         return ((fs[&name].clone().len() as i64) == 0)
   |                ^                                     ^
   |
   = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
   |
43 -         return ((fs[&name].clone().len() as i64) == 0)
43 +         return (fs[&name].clone().len() as i64) == 0
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/empty-directory.rs:60:28
   |
60 |     let duration_us: i64 = ((_end - _start) / 1000);
   |                            ^                      ^
   |
help: remove these parentheses
   |
60 -     let duration_us: i64 = ((_end - _start) / 1000);
60 +     let duration_us: i64 = (_end - _start) / 1000;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/empty-directory.rs:61:29
   |
61 |     let memory_bytes: i64 = (_end_mem - _start_mem);
   |                             ^                     ^
   |
help: remove these parentheses
   |
61 -     let memory_bytes: i64 = (_end_mem - _start_mem);
61 +     let memory_bytes: i64 = _end_mem - _start_mem;
   |

error[E0277]: the trait bound `String: Borrow<&str>` is not satisfied
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/empty-directory.rs:42:24
   |
42 |     if fs.contains_key(&name) {
   |           ------------ ^^^^^ the trait `Borrow<&str>` is not implemented for `String`
   |           |
   |           required by a bound introduced by this call
   |
   = help: the trait `Borrow<&_>` is not implemented for `String`
           but trait `Borrow<_>` is implemented for it
   = help: for that trait implementation, expected `str`, found `&str`
note: required by a bound in `HashMap::<K, V, S>::contains_key`
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1137:5

error[E0277]: the trait bound `String: Borrow<&str>` is not satisfied
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/empty-directory.rs:43:21
   |
43 |         return ((fs[&name].clone().len() as i64) == 0)
   |                     ^^^^^ the trait `Borrow<&str>` is not implemented for `String`
   |
   = help: the trait `Borrow<&_>` is not implemented for `String`
           but trait `Borrow<_>` is implemented for it
   = help: for that trait implementation, expected `str`, found `&str`
   = note: required for `HashMap<String, Vec<String>>` to implement `Index<&&str>`

error[E0308]: mismatched types
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/empty-directory.rs:49:15
   |
49 |     fs.insert("/tmp".clone(), vec![]);
   |        ------ ^^^^^^^-----^^
   |        |      |      |
   |        |      |      help: try using a conversion method: `to_string`
   |        |      expected `String`, found `&str`
   |        arguments to this method are incorrect
   |
note: method defined here
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0308]: mismatched types
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/empty-directory.rs:50:15
   |
50 |     fs.insert("/var".clone(), vec![String::from("log")]);
   |        ------ ^^^^^^^-----^^
   |        |      |      |
   |        |      |      help: try using a conversion method: `to_string`
   |        |      expected `String`, found `&str`
   |        arguments to this method are incorrect
   |
note: method defined here
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error: aborting due to 4 previous errors; 5 warnings emitted

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
